Resources/public/css/list.css
/**
 * List builder specific CSS
 */
 
 /* Scroll results list horizontally if the columns don't fit on the screen */
.results-list {
    position: relative;
    overflow-x: auto;
    padding-top: 12px; /* make rook for scrollbar */
}

/* List results number bar styles */
.list_nbresults {
    margin-bottom: 8px;
}

/* List sorting styles */
.list_thead .actions {
    min-width: 100px;
}

.list_thead_column .sort-addon > .sort-icon:after {
    font-family: FontAwesome;
    display: inline;
    padding-left: 6px;
    font-weight: normal;
    color: #000;
}

.list_thead_column .sort-addon > u,
.list_thead_column .sort-addon > .sort-icon > u,
.list_thead_column .sort-addon > .sort-icon:hover {
    text-decoration: none;
}

.list_thead_column .sort-addon:hover > .sort-icon > u {
    text-decoration: underline;
}

.list_thead_column .sort-addon > .sort-icon.placeholder:after {
    visibility: hidden;
}

.list_thead_column .sort-addon:hover > .sort-icon.placeholder:after {
    visibility: visible;
}

.list_thead_column .sort-addon > .sort-amount-asc:after,
.list_thead_column .sort-addon:hover > .sort-amount-desc:after {
    content: "\f160";
}

.list_thead_column .sort-addon > .sort-amount-desc:after,
.list_thead_column .sort-addon:hover > .sort-amount-asc:after {
    content: "\f161";
}

.list_thead_column .sort-addon > .sort-alpha-asc:after,
.list_thead_column .sort-addon:hover > .sort-alpha-desc:after {
    content: "\f15d";
}

.list_thead_column .sort-addon > .sort-alpha-desc:after,
.list_thead_column .sort-addon:hover > .sort-alpha-asc:after {
    content: "\f15e";
}

.list_thead_column .sort-addon > .sort-numeric-asc:after,
.list_thead_column .sort-addon:hover > .sort-numeric-desc:after {
    content: "\f162";
}

.list_thead_column .sort-addon > .sort-numeric-desc:after,
.list_thead_column .sort-addon:hover > .sort-numeric-asc:after {
    content: "\f163";
}

/* List scopes */
.list_scopes {
    margin: 10px auto;
}

.list_scope_group .btn [class^="fa-"],
.list_scope_group .btn [class*=" fa-"] {
    font-size: 12px;
}

/* List pagination styles */
.pagination {
   margin: 0px;
   font-size: 14px;
}

.pagination .perpage {
    min-width: 50px;
}

/* List actions bar styles */
.list-actions-wrapper {
    /* this wrapper fixes the toolbar on small screens */
    position: absolute;
    left: 0px;
    right: 0px;
}

.list-actions > .btn-toolbar + .btn-toolbar {
    margin-left: 10px;
}

.list-actions > .btn-toolbar.pull-right + .btn-toolbar {
    margin-right: 10px;
}

/* Object actions styles */
div[class^='object-actions-'],
div[class*=' object-actions-'] {
    margin-bottom: 10px
}

.object_actions > .btn-group > a.btn {
    margin-left: -1px;
    -webkit-border-radius: 0px;
       -moz-border-radius: 0px;
            border-radius: 0px;
}

.object_actions .btn [class^="fa-"],
.object_actions .btn [class*=" fa-"] {
    font-size: 14px;
}

/* Select with btn caret */
.select-caret {
    display: inline-block;
    overflow: hidden;
    min-width: 60px;
}

.select-caret > select {
    border: 0 none;
    width: 135%;
    outline-offset: 0 !important;
    outline: 0 none transparent !important;
}

.select-caret:after {
    content: "";
    position: absolute;
    display: inline-block;
    height: 0;
    width: 0;
    top: 12px;
    right: 6px;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-top: 4px solid #000000;
}

.select-caret.btn {
    padding: 0px;
    height: 28px;
}

